# ProjectTartarus

./: .gitignore  CMakeLists.txt  README.md
PT/: CMakeLists.txt
PT/include/: i_placeholder.txt
PT/src/: CMakeLists.txt
PT/src/argv/: argv.c  argv.h
PT/src/main/: main.c  t_main.c  t_main.h
PT/src/misc/: stats.h
